--- a/config/cmd_vel_mux_params.yaml
+++ b/config/cmd_vel_mux_params.yaml
@@ -16,32 +16,17 @@ cmd_vel_mux:
   ros__parameters:
     subscribers:
         default_input:
-          topic:       "input/default"
+          topic:       "/mux/cmd_vel_rocos"
           timeout:     0.1
           priority:    0
-          short_desc:  "The default cmd_vel, controllers unaware that we are multiplexing cmd_vel should come here"
+          short_desc:  "The default cmd_vel is from rocos."
         navigation_stack:
-          topic:       "input/navigation"
+          topic:       "/mux/cmd_vel_autonomous"
           timeout:     0.5
           priority:    1
           short_desc:  "Navigation stack controller"
-        navigation_stack_controller:
-          topic:       "input/joystick"
+        autodrive_stack:
+          topic:       "/mux/cmd_vel_autodrive"
           timeout:     0.1
           priority:    10
           short_desc:  "Navigation stack remote control"
-        remote_control:
-          topic:       "input/remote"
-          timeout:     0.1
-          priority:    9
-          short_desc:  "Remote control"
-        web_application:
-          topic:       "input/webapp"
-          timeout:     0.3
-          priority:    8
-          short_desc:  "Web application"
-        keyboard_operation:
-          topic:       "input/keyop"
-          timeout:     0.1
-          priority:    7
-          short_desc:  "Keyboard operation"
